--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 														<h1 style="font-size:2.5em;color:#42A3BF;" class="font-body t700 ls3 uppercase">April 17-19th - Denver, CO</h1>
 													</div>
 													<div class="clear"></div>
-													<div id="countdown-xmas" class="xmas-countdown bottommargin-lg divcenter" style="max-width:700px;"></div>
+													<!-- <div id="countdown-xmas" class="xmas-countdown bottommargin-lg divcenter" style="max-width:700px;"></div> -->
 													<!-- HUBSPOT LINK -->
 
 															<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
@@ -131,7 +131,7 @@
 
 		</section><!-- #slider end -->
 
-	
+
 
 		<!-- Content
 		============================================= -->
